tinygsn: refactoring of queues and streamsource. wrappers, processing class are singleton. generic service for running wrappers. allows multiple wrapper for one VS, allow one wrapper to feed multiple VS. (TODO user interface). Activity VS.